# Rudra

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  HANDOFF.md  KNOWN_ISSUES.md  LAXMAN_HANDOFF.md  README.md  SETUP_GUIDE.md  SYSTEM_STATUS.md  docker-compose.yml
backend/: 01b7731b-70ce-4d42-9d52-79fe40b28456_chem.txt  2d5a89b3-e98a-49bc-9d55-a9ab5ce158d6.txt  Dockerfile  README.md  b2b215f7-7cc2-431b-b5b6-b9c7a3a6182e_chunk.txt  babfb86e-e3c7-40c8-b3e3-ca88a166e625.txt  pyproject.toml  requirements.lock.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_auth_users.py  003_knowledge_graph.py  004_project_os.py  005_document_brain.py  006_integrations.py  007_agent_data.py  008_jarvis_layer.py  009_ea_command_stack.py  010_research_library.py  011_phases_3_9.py
backend/rudra/: main.py
backend/rudra/agents/: base.py  context_builder.py  phase_tools.py  phases.py  profiles.py  react.py  rudra_command.py  tools.py  types.py
backend/rudra/api/: deps.py  schemas.py
backend/rudra/auth/: models.py  (+2 more)
backend/tests/: conftest.py  test_agent_data.py  test_agent_free_sources.py  test_agent_phases.py  test_agent_routing.py  test_agents.py  test_auth.py  test_command_stream.py  test_documents.py  test_ea_command_stack.py  test_ea_free_sources.py  test_graph.py  test_integration.py  test_integrations.py  test_jarvis_layer.py  test_phases_3_9.py  test_projects.py  test_react.py  test_research.py  test_research_library.py  test_rudra_command.py  test_rudra_voice.py  test_scheduler.py  test_skills.py  test_tools.py  test_traces.py
(+288 files in other folders)
